# Poverty_DD

./: .gitignore  README.md  pyproject.toml
scripts/: _common.ps1  bootstrap.ps1  run.ps1  test.ps1  tune_hgb.ps1  validate.ps1  viz.ps1
src/poverty/: __init__.py  data_io.py  metrics.py  models.py  validate.py  viz.py
tests/: test_metrics.py
